# route/biz/model/hewo/tikshop/route/product/product.go
@@ -11,7 +11,7 @@ import (
 
 // 获取单个商品
 type GetProductByIDRequest struct {
-	ProductID int64 `thrift:"product_id,1" json:"product_id" path:"id" vd:"$>0"`
+	ProductID int64 `thrift:"product_id,1" form:"-" json:"-" path:"id" vd:"$>0"`
 }
 
 func NewGetProductByIDRequest() *GetProductByIDRequest {
@@ -860,7 +860,7 @@ func (p *CreateProductResponse) String() string {
 
 // 更新商品
 type UpdateProductByIDRequest struct {
-	ProductID   int64   `thrift:"product_id,1" json:"product_id" path:"id" vd:"$>0"`
+	ProductID   int64   `thrift:"product_id,1" form:"-" json:"-" path:"id" vd:"$>0"`
 	Name        *string `thrift:"name,2,optional" form:"name" json:"name,omitempty" vd:"len($) > 0 && len($) < 255"`
 	Description *string `thrift:"description,3,optional" form:"description" json:"description,omitempty"`
 	Price       *int64  `thrift:"price,4,optional" form:"price" json:"price,omitempty" vd:"$>0"`
@@ -1432,9 +1432,8 @@ func (p *UpdateProductByIDResponse) String() string {
 // 获取商品列表
 type ListProductsRequest struct {
 	MerchantID int64 `thrift:"merchant_id,1" json:"merchant_id" query:"merchant_id" vd:"$>0"`
-	Status     int8  `thrift:"status,2" json:"status" query:"status"`
-	Page       int64 `thrift:"page,3" json:"page" query:"page" vd:"$>0"`
-	PageSize   int64 `thrift:"page_size,4" json:"page_size" query:"page_size" vd:"$>0 && $<=100"`
+	Page       int64 `thrift:"page,2" json:"page" query:"page" vd:"$>0"`
+	PageSize   int64 `thrift:"page_size,3" json:"page_size" query:"page_size" vd:"$>0 && $<=100"`
 }
 
 func NewListProductsRequest() *ListProductsRequest {
@@ -1448,10 +1447,6 @@ func (p *ListProductsRequest) GetMerchantID() (v int64) {
 	return p.MerchantID
 }
 
-func (p *ListProductsRequest) GetStatus() (v int8) {
-	return p.Status
-}
-
 func (p *ListProductsRequest) GetPage() (v int64) {
 	return p.Page
 }
@@ -1462,9 +1457,8 @@ func (p *ListProductsRequest) GetPageSize() (v int64) {
 
 var fieldIDToName_ListProductsRequest = map[int16]string{
 	1: "merchant_id",
-	2: "status",
-	3: "page",
-	4: "page_size",
+	2: "page",
+	3: "page_size",
 }
 
 func (p *ListProductsRequest) Read(iprot thrift.TProtocol) (err error) {
@@ -1495,7 +1489,7 @@ func (p *ListProductsRequest) Read(iprot thrift.TProtocol) (err error) {
 				goto SkipFieldError
 			}
 		case 2:
-			if fieldTypeId == thrift.BYTE {
+			if fieldTypeId == thrift.I64 {
 				if err = p.ReadField2(iprot); err != nil {
 					goto ReadFieldError
 				}
@@ -1505,14 +1499,6 @@ func (p *ListProductsRequest) Read(iprot thrift.TProtocol) (err error) {
 		case 3:
 			if fieldTypeId == thrift.I64 {
 				if err = p.ReadField3(iprot); err != nil {
-					goto ReadFieldError
-				}
-			} else if err = iprot.Skip(fieldTypeId); err != nil {
-				goto SkipFieldError
-			}
-		case 4:
-			if fieldTypeId == thrift.I64 {
-				if err = p.ReadField4(iprot); err != nil {
 					goto ReadFieldError
 				}
 			} else if err = iprot.Skip(fieldTypeId); err != nil {
@@ -1560,17 +1546,6 @@ func (p *ListProductsRequest) ReadField1(iprot thrift.TProtocol) error {
 }
 func (p *ListProductsRequest) ReadField2(iprot thrift.TProtocol) error {
 
-	var _field int8
-	if v, err := iprot.ReadByte(); err != nil {
-		return err
-	} else {
-		_field = v
-	}
-	p.Status = _field
-	return nil
-}
-func (p *ListProductsRequest) ReadField3(iprot thrift.TProtocol) error {
-
 	var _field int64
 	if v, err := iprot.ReadI64(); err != nil {
 		return err
@@ -1580,7 +1555,7 @@ func (p *ListProductsRequest) ReadField3(iprot thrift.TProtocol) error {
 	p.Page = _field
 	return nil
 }
-func (p *ListProductsRequest) ReadField4(iprot thrift.TProtocol) error {
+func (p *ListProductsRequest) ReadField3(iprot thrift.TProtocol) error {
 
 	var _field int64
 	if v, err := iprot.ReadI64(); err != nil {
@@ -1609,10 +1584,6 @@ func (p *ListProductsRequest) Write(oprot thrift.TProtocol) (err error) {
 		}
 		if err = p.writeField3(oprot); err != nil {
 			fieldId = 3
-			goto WriteFieldError
-		}
-		if err = p.writeField4(oprot); err != nil {
-			fieldId = 4
 			goto WriteFieldError
 		}
 	}
@@ -1651,10 +1622,10 @@ WriteFieldEndError:
 }
 
 func (p *ListProductsRequest) writeField2(oprot thrift.TProtocol) (err error) {
-	if err = oprot.WriteFieldBegin("status", thrift.BYTE, 2); err != nil {
+	if err = oprot.WriteFieldBegin("page", thrift.I64, 2); err != nil {
 		goto WriteFieldBeginError
 	}
-	if err := oprot.WriteByte(p.Status); err != nil {
+	if err := oprot.WriteI64(p.Page); err != nil {
 		return err
 	}
 	if err = oprot.WriteFieldEnd(); err != nil {
@@ -1668,24 +1639,7 @@ WriteFieldEndError:
 }
 
 func (p *ListProductsRequest) writeField3(oprot thrift.TProtocol) (err error) {
-	if err = oprot.WriteFieldBegin("page", thrift.I64, 3); err != nil {
-		goto WriteFieldBeginError
-	}
-	if err := oprot.WriteI64(p.Page); err != nil {
-		return err
-	}
-	if err = oprot.WriteFieldEnd(); err != nil {
-		goto WriteFieldEndError
-	}
-	return nil
-WriteFieldBeginError:
-	return thrift.PrependError(fmt.Sprintf("%T write field 3 begin error: ", p), err)
-WriteFieldEndError:
-	return thrift.PrependError(fmt.Sprintf("%T write field 3 end error: ", p), err)
-}
-
-func (p *ListProductsRequest) writeField4(oprot thrift.TProtocol) (err error) {
-	if err = oprot.WriteFieldBegin("page_size", thrift.I64, 4); err != nil {
+	if err = oprot.WriteFieldBegin("page_size", thrift.I64, 3); err != nil {
 		goto WriteFieldBeginError
 	}
 	if err := oprot.WriteI64(p.PageSize); err != nil {
@@ -1696,9 +1650,9 @@ func (p *ListProductsRequest) writeField4(oprot thrift.TProtocol) (err error) {
 	}
 	return nil
 WriteFieldBeginError:
-	return thrift.PrependError(fmt.Sprintf("%T write field 4 begin error: ", p), err)
+	return thrift.PrependError(fmt.Sprintf("%T write field 3 begin error: ", p), err)
 WriteFieldEndError:
-	return thrift.PrependError(fmt.Sprintf("%T write field 4 end error: ", p), err)
+	return thrift.PrependError(fmt.Sprintf("%T write field 3 end error: ", p), err)
 }
 
 func (p *ListProductsRequest) String() string {
@@ -1992,7 +1946,7 @@ func (p *ListProductsResponse) String() string {
 
 // 删除商品
 type DeleteProductByIDRequest struct {
-	ProductID int64 `thrift:"product_id,1" json:"product_id" path:"id" vd:"$>0"`
+	ProductID int64 `thrift:"product_id,1" form:"-" json:"-" path:"id" vd:"$>0"`
 }
 
 func NewDeleteProductByIDRequest() *DeleteProductByIDRequest {
@@ -2338,7 +2292,7 @@ func (p *DeleteProductByIDResponse) String() string {
 
 // 修改库存
 type ModifyStockByIDRequest struct {
-	ProductID    int64 `thrift:"product_id,1" json:"product_id" path:"id" vd:"$>0"`
+	ProductID    int64 `thrift:"product_id,1" form:"-" json:"-" path:"id" vd:"$>0"`
 	Delta        int64 `thrift:"delta,2" form:"delta" json:"delta" vd:"$!=0"`
 	CurrentStock int64 `thrift:"currentStock,3" form:"current_stock" json:"current_stock" vd:"$>=0"`
 }
